# LLM-output-scrub

./: .cursorignore  .flake8  .gitignore  LICENSE  Makefile  README.md  TODO.md  main.py  mypy.ini  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
assets/: icon.icns
scripts/: test_llm_output_scrub.sh
src/: run_app.py
src/llm_output_scrub/: __init__.py  app.py  config_manager.py  dash_nlp.py  llm_output_scrub.py  nlp.py  py.typed  wordlists.py
tests/: __init__.py  input.txt  integration-test.sh  test_llm_output_scrub.py  test_scrub.py  test_smart_text_input.txt
typings/: rumps.pyi
